k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testeapp
  labels:
    app: testeapp
    vee.codes/cluster: local
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: testeapp
